agregue un titulo

--- a/inicio.html
+++ b/inicio.html
@@ -6,5 +6,11 @@
 		<meta name="descripcion" content="Pagina web de plantas">
 	</head>
 	<body>
+        <style>
+            h1{
+                font-size: 350px;
+            }
+        </style>
+        <h1>Hola feo</h1>
 	</body>
 </html>
