--- a/inicio.html
+++ b/inicio.html
@@ -9,6 +9,7 @@
         <style>
             h1{
                 font-size: 350px;
+                background-color: brown;
             }
         </style>
         <h1>Hola feo</h1>
