--- a/inicio.html
+++ b/inicio.html
@@ -3,7 +3,8 @@
 <html>
 	<head>
 		<title>Inicio</title>
-		<meta name="descripcion" content="Pagina web de plantas">
+        <meta name="descripcion" content="Pagina web de plantas">
+        <link rel="stylesheet" href="inicio.css">
 	</head>
 	<body>
         <style>
