--- a/inicio.html
+++ b/inicio.html
@@ -7,6 +7,9 @@
         <link rel="stylesheet" href="inicio.css">
 	</head>
 	<body>
+        <header>
+            Guie
+        </header>
         <style>
             h1{
                 font-size: 350px;
