PV2 agregue el nav

--- a/inicio.html
+++ b/inicio.html
@@ -9,12 +9,11 @@
 	<body>
         <header>
             Guie
+            <nav>
+                <div>About</div>
+                <div>LyfeStyle</div>
+            </nav>
         </header>
-        <style>
-            h1{
-                font-size: 350px;
-            }
-        </style>
         <h1>Hola feo</h1>
 	</body>
 </html>
