PV2 se agrega el footer

--- a/inicio.html
+++ b/inicio.html
@@ -16,5 +16,6 @@
         </header>
         <h1>Hola feo</h1>
         <p>"Es muy duro empezar, por eso no cualquiera hace cosas nuevas (pero más dura la verdura)" -Ernesto 2021</p>
+        <footer>Contacto</footer>
 	</body>
 </html>
