--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
         <script src="public/es6/index.js"></script>
     </head>
     <body>
-        
+        <p>"Es muy duro empezar, por eso no cualquiera hace cosas nuevas (pero más dura la verdura)" -Ernesto 2021</p>
     </body>
 </html>
