--- a/Pagina Web/index.html
+++ b/Pagina Web/index.html
@@ -1,11 +1,24 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="UTF-8">
+        <meta name="description" content="Blog y tienda en linea de productos como macetas, plantas invernarios,etc.">
+        <meta name="robots" content="index,follow">
+        <meta name="viewport" content="width-device-with, initial-scale=1.0">
         <title>Guie</title>
-        <link rel="stylesheet" href="index.css">
+        <link rel="stylesheet" href="./CSS/index.css">
+        <link rel="stylesheet" href="./CSS/movil.css" media="screen and (min-width: 320px)">
         <script src="public/es6/index.js"></script>
     </head>
     <body>
-        <p>"Es muy duro empezar, por eso no cualquiera hace cosas nuevas (pero más dura la verdura)" -Ernesto 2021</p>
+       <header>
+
+       </header>
+       <main>
+
+       </main>
+       <footer>
+           
+       </footer>
     </body>
 </html>
