--- a/Pagina Web/index.html
+++ b/Pagina Web/index.html
@@ -7,18 +7,23 @@
         <meta name="viewport" content="width-device-with, initial-scale=1.0">
         <title>Guie</title>
         <link rel="stylesheet" href="./CSS/index.css">
-        <link rel="stylesheet" href="./CSS/movil.css" media="screen and (min-width: 320px)">
-        <script src="public/es6/index.js"></script>
     </head>
     <body>
        <header>
-
+            <nav>
+                <ul class="conten_nav">
+                    <li><a href="" class="navc">Acerca</a></li>
+                    <li><a href="" class="navc">Blog</a></li>
+                    <li><a href="" class="navc">Tienda</a></li>
+                    <li><a href="" class="navc">Contacto</a></li>
+                </ul>
+            </nav>
        </header>
        <main>
 
        </main>
        <footer>
-           
+
        </footer>
     </body>
 </html>
