--- a/index.html
+++ b/index.html
@@ -4,21 +4,28 @@
         <meta charset="UTF-8">
         <meta name="description" content="Blog y tienda en linea de productos como macetas, plantas invernarios,etc.">
         <meta name="robots" content="index,follow">
-        <meta name="viewport" content="width-device-with, initial-scale=1.0">
+        <meta name="viewport" content="initial-scale=1.0">
         <title>Guie</title>
         <link rel="stylesheet" href="./index.css">
         <script src="public/es6/index.js"></script>
     </head>
     <body>
        <header>
-            <nav>
-                <ul class="conten_nav">
+            <div class="conten_logo">
+                <img src="https://i.ibb.co/3yTx4JJ/Logo2.png" alt="Logo">
+            </div>
+            <nav class="conten_menu" id="1">
+                <ul class="lista_nav">
+                    <li><a href="" class="navc">Inicio</a></li>
                     <li><a href="" class="navc">Acerca</a></li>
                     <li><a href="" class="navc">Blog</a></li>
                     <li><a href="" class="navc">Tienda</a></li>
                     <li><a href="" class="navc">Contacto</a></li>
                 </ul>
             </nav>
+            <div class="icono_menu">
+                <img src="https://i.ibb.co/XtZ8nMm/open-menu.png" alt="menu" id="icono-menu" onclick="accion()">
+            </div>
        </header>
        <main>
 
