--- a/index.html
+++ b/index.html
@@ -31,7 +31,19 @@
 
        </main>
        <footer>
-
+            <div class="conten_logof">
+                <img src="https://i.ibb.co/3yTx4JJ/Logo2.png" alt="Logo">
+            </div>
+            <div class="copy">
+                <p>&copy;Guie</p>
+            </div>
+            <div class="iconos">
+                <p>Contactanos:</p>
+                <img src="https://i.ibb.co/QC3CkJ5/facebook.png" alt="facebook" class="facebook">
+                <img src="https://i.ibb.co/DMXBYP6/instagram.png" alt="instagram" class="instagram">
+                <img src="https://i.ibb.co/tzStdKR/twitter.png" alt="twitter" class="twitter">
+                <img src="https://i.ibb.co/B29dyzz/tik-tok.png" alt="tik-tok" class="tik-tok">
+            </div>
        </footer>
     </body>
 </html>
